--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MYSQL_ROOT_PASSWORD=admin
-SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/fiap-01
+SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/customer
 SPRING_DATASOURCE_USERNAME=root
 SPRING_DATASOURCE_PASSWORD=admin
