--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -56,4 +56,4 @@ jobs:
 
     - name: Atualizar deployment no EKS
       run: |
-        kubectl set image deployment/challenge challenge=${{ secrets.DOCKER_IMAGE }}:latest
+        kubectl set image deployment/customer-service customer-service=${{ secrets.DOCKER_IMAGE }}:latest
